# FK-Calculator

./: CMakeLists.txt  README.md
app/: main.cpp
include/: KinematicsCalculator.h  RobotModel.h
include/gui/: JointGroupBox.h  RobotGLWidget.h  mainwindow.h
src/: KinematicsCalculator.cpp  RobotModel.cpp
src/gui/: JointGroupBox.cpp  RobotGLWidget.cpp  mainwindow.cpp
